# bachelor_thesis

./: .gitignore  .gitmodules  LICENSE.md  README.md
programming/configfiles/: ga_sample.cfg  garf_prototype.cfg  lsrf.cfg  lsrflex.cfg  rsrf.cfg  rsrflex.cfg
programming/ga/configfiles/: garf_default.cfg  garflex_default.cfg  genetic_algorithm_ralans.cfg  genetic_algorithm_sample.cfg  lsrflex.cfg  rsrflex.cfg
programming/ga/src/: INSTALL.txt  brutforce.py  config.py  diff_con.py  evaluate.py  genetic_algorithm_ralans.cfg  init_functions.py  (+20 more)
programming/ga/src/port3_ralans/src/launcher/: CMakeLists.txt  GeometryHelper.cpp  GeometryHelper.hpp  Globals.hpp  IOHelper.cpp  Launcher.cpp  Makefile  Ray.cpp  easylogging++.h  edges  main.cpp  makeViewable.py  prepare4ns3.py
programming/python/: ns3-ralans  ns3-ralans_source
programming/src/: EXAMPLES.txt  README.txt  brutforce.py  compute_threshold.py  config.py  constants.py  init_functions.py  local_search.py  local_search_flexible.py  mate_functions.py  mutate_functions.py  my_util.py  plot_helper.py  plot_points.py  print_helper.py  python2_ralans_test.py  ralans  ralans_helper.py  random_search.py  repair_westerberg.py  replace_functions.py  sample_run.sh  select_functions.py  simple_ga.py  spne.py  spne_test.py
prototype/julia/: runSimpleNodeGA.jl
prototype/python/: config.py  general_test.py  init_functions.py  mate_functions.py  my_util.py  plot_helper.py  print_helper.py  ralans  simple_ga.py  spne.py  try_plots.py
prototype_julia/: SimpleNodeGA.jl
prototype_python/: plot_helper.py  simple_ga.py  spne.py
(+47 files in other folders)
